# dd-ui

./: .gitignore  Makefile  README.md  components.json  next.config.js  package-lock.json  package.json  tailwind.config.js
api/: environment.yml  pyproject.toml
api/src/backend/: dependencies.py  main.py  settings.py
api/src/backend/internal/: admin.py
api/src/backend/mappings/: __init__.py  analyzers.py  base.py  fragments.py
api/src/backend/mappings/annotations/: detections.py  embeddings.py
api/src/backend/mappings/data/: document.py  email.py  image.py
api/src/backend/mappings/parents/: file.py  message.py
api/src/backend/routers/: emails.py  images.py
api/src/backend/schemas/: __init__.py  base.py  settings.py
api/src/backend/schemas/data/: __init__.py  archive.py  audio.py  chat.py  code.py  document.py  email.py  image.py  location.py  log.py  table.py  video.py
api/src/backend/schemas/data/parents/: file.py  message.py
api/src/backend/utils/: exceptions.py  health.py  info.py  logging.py  middleware.py
app/: globals.css  layout.jsx  providers.jsx
app/(typePages)/: layout.jsx
app/about/: page.js
app/developer/: page.js
app/search/: onlineWorker.js  page.jsx  worker.js
components/: navbar.jsx  searchbar.jsx  sidebar.jsx
components/about/: apps.jsx  sticky-scroll-reveal.jsx  wavy-background.jsx
components/entity/: EntityPage.jsx  HighlightSpan.jsx  const.js
components/header/: Brand.jsx  DarkModeToggle.jsx  Header.jsx
components/ui/: button.jsx  dropdown-menu.jsx  input.jsx  label.jsx  (+6 more)
public/: media
store/: datasets.jsx
(+12 files in other folders)
